--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
 <html>
-    
+    <body>
+        <div class="container">
+            {{ content }}
+        </div><!-- /.container -->
+    </body>
 </html>
