--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="../semantic/dist/semantic.css">
+        
+      <script src="../assets/library/jquery.min.js"></script>
+      <script src="../assets/library/das-site.js"></script>
+
+    </head>
     <body>
-        <div class="container">
-            {{ content }}
-        </div><!-- /.container -->
+        <div class="pusher">  
+  
+            <!-- header area -->
+            <div class="ui secondary inverted vertical masthead center stackable aligned segment">
+
+                <div class="container">
+                    {{ content }}
+                </div><!-- /.container -->
+            </div>
+            
+        </div>
     </body>
 </html>
