--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" type="text/css" href="../semantic/dist/semantic.css">
+      <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.css">
         
-      <script src="../assets/library/jquery.min.js"></script>
-      <script src="../assets/library/das-site.js"></script>
+      <script src="/assets/library/jquery.min.js"></script>
+      <script src="/assets/library/das-site.js"></script>
 
     </head>
     <body>
