--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.css">
-        
-      <script src="/assets/library/jquery.min.js"></script>
-      <script src="/assets/library/das-site.js"></script>
 
-    </head>
-    <body>
-        <div class="pusher">  
-  
-            <!-- header area -->
-            <div class="ui secondary inverted vertical masthead center stackable aligned segment">
+  {% include head.html %}
 
-                <div class="container">
-                    {{ content }}
-                </div><!-- /.container -->
-            </div>
-    
-        </div>
-    </body>
+  <body>
+
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+      
+      
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
+          fjs.parentNode.insertBefore(js, fjs);
+        }
+        (document, 'script', 'facebook-jssdk'));
+    </script>
+
+  </body>
+
 </html>
