fix blog layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,6 +49,8 @@ layout: default
   {% endif %}
 </div>
 
+
+<div class="post">
 <div class="ui grid">
     <div class="two wide column">
         <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large" data-mobile-iframe="true">
@@ -61,4 +63,5 @@ layout: default
             <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
+</div>
 </div>
