--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,40 +28,46 @@ layout: default
     {{ content }}
   </div>  
 
-</article>
     
-<div class="post">
+<div class="ui container">
+    <div class="ui middle aligned grid">
+        <div class="two wide column">
+            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large" data-mobile-iframe="true">
+                <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
+            </div>
+        </div>
+
+        <div class="two wide column">
+            <div style="padding-top:5px;" data-layout="button" data-size="large" data-mobile-iframe="true">
+                <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
+    </div>
+</div>
+   
+<br/>
+<div class="ui divider"></div>
+<br/>
+
+<div class="ui container">
       
 <!-- Previous / Next post -->
-  <br>
+  <br/>
   {% if page.previous %}
     <p style="font-size:90%">      
         <button class="ui orange basic button" 
-                onclick="location.href='{{ page.previous.url }}';">Previous article</div>
+                onclick="location.href='{{ page.previous.url }}';">Previous article</button>
     </p>
   {% endif %}
 
   {% if page.next %}
     <p style="font-size:90%">
         <button class="ui orange basic button" 
-                onclick="location.href='{{ page.next.url }}';">Next article</div>
+                onclick="location.href='{{ page.next.url }}';">Next article</button>
     </p>
   {% endif %}
 </div>
 
 
-<div class="post">
-<div class="ui grid">
-    <div class="two wide column">
-        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large" data-mobile-iframe="true">
-            <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
-        </div>
-    </div>
-
-    <div class="two wide column">
-        <div>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-    </div>
-</div>
-</div>
+</article>
