--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,9 @@
             
             <div class="bottom aligned column">
             
-                 <nav class="site-nav">
+                 <nav class="main-nav">
+                    <ul>
+<!--
                       <a href="#" class="menu-icon">
                         <svg viewBox="0 0 18 15">
                           <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
@@ -22,15 +24,18 @@
                           <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
                         </svg>
                       </a>
+-->
 
-                      <div class="trigger masthead inverted pointing menu">
+                      <div class="trigger masthead inverted menu">
                         {% for my_page in site.pages %}
                           {% if my_page.title %}
-                          <a class="ui inverted orange basic button" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+                          <a class="ui inverted orange basic button menu-icon" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
                           {% endif %}
                         {% endfor %}
                       </div>
-                    </nav>
+                        
+                     </ul>
+                </nav>
              </div>
         </div>
     </div>
