--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,13 @@
 <header class="ui secondary inverted segment">
 
   <div class="wrapper">
-    
-    <div class="ui vertically divided grid">
-        <div class="three column row">
-            <div class="bottom aligned column">
-                <img class="ui small image" src="/assets/images/blog-icon.png">
-            </div>
-            
-            <div class="left bottom aligned column">
-              <section>
+  
+      <div class="ui vertically divided grid">
+        <div class="two column row">
+         <div class="column">
+            <img class="ui small image" src="/assets/images/blog-icon.png">
+      
+            <section>
                 <div class="ui inverted container">
                     <div class="ui text container">
                         <h1>{{ site.title }}</h1>
@@ -18,8 +16,7 @@
               </section>
             </div>
             
-            <div class="bottom aligned column">
-              <div class="ui container">
+           <div class="column">
                 <nav class="ui large secondary inverted poiting menu">
                   <div class="right item">
 <!--                    add home page link  -->
@@ -34,9 +31,7 @@
                   </div>
                 </nav>
 		      </div>
-             </div>
-        </div>
-    </div>
+      </div>
   
   </div>
 
