--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,27 @@
     
  <link rel="stylesheet" type="text/css" href="/css/das-site.css">
  <link rel="stylesheet" type="text/css" href="/css/semantic.css">
-<!-- <link rel="stylesheet" type="text/css" href="/css/tags.css">-->
+ <link rel="stylesheet" type="text/css" href="/semantic/dist/components/icon.css">
+ <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.woff">    
+ <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.woff2">
+ <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.ttf">
     
-<!--    <meta property="fb:app_id" content="{{ site.facebook_app_id }}" />-->
+    
 <meta property="og:url" content="{{ site.url }}/{{ page.url }}" />
-<meta property="og:type" content="article" />
-<meta property="og:title" content="{{ page.title }}" />
-<meta property="og:description" content="{{ page.content | markdownify | strip_html | strip_newlines | truncate: 300 }}" />
-<meta property="og:image" content="{{ site.url }}/{{ page.image }}" />
+<meta property="og:description" context="{{ page.content | strip_html | condense_spaces | truncate:300 }}">
+<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="{{ site.title }}">
+<meta property="og:locale" content="en_US">
+    
+<meta property="og:image" content="{% if site.url contains 'https://' %}{{ site.url | replace:'https://','http://' }}{% else %}{{ site.url }}{% endif %}/{% if page.og_image %}{{ page.og_image }}{% else %}{{ site.og_image }}{% endif %}">
+
+<meta property="og:image:type" content="{% if page.og_image %}{{ page.og_image_type }}{% else %}{{ site.og_image_type }}{% endif %}">
+
+<meta property="og:image:width" content="{% if page.og_image %}{{ page.og_image_width }}{% else %}{{ site.og_image_width }}{% endif %}">
+
+<meta property="og:image:height" content="{% if page.og_image %}{{ page.og_image_height }}{% else %}{{ site.og_image_height }}{% endif %}">
+    
+<meta property="fb:profile_id" content="{{ site.fb_profile_id }}">
     
 </head>
