--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,23 +28,8 @@ layout: default
     {{ content }}
   </div>  
 
-    
-<div class="ui container">
-    <div class="ui middle aligned grid">
-        <div class="two wide column">
-            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large" data-mobile-iframe="true">
-                <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
-            </div>
-        </div>
 
-        <div class="two wide column">
-            <div style="padding-top:5px;" data-layout="button" data-size="large" data-mobile-iframe="true">
-                <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
-                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </div>
-    </div>
-</div>
+{% include social-share.html %}
    
 <br/>
 <div class="ui divider"></div>
