add picture to blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,12 @@ layout: default
           </div>
       </p>
   </header>
-    
+
+
+
+ <img class="ui centered tiny image" src="{{ page.image }}">
+
+<br/>
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
