--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:locale" content="en_US">
     
-<meta property="og:image" content="{% if site.url contains 'https://' %}{{ site.url | replace:'https://','http://' }}{% else %}{{ site.url }}{% endif %}/{% if page.og_image %}{{ page.og_image }}{% else %}{{ site.og_image }}{% endif %}">
+<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >
 
 <meta property="og:image:type" content="{% if page.og_image %}{{ page.og_image_type }}{% else %}{{ site.og_image_type }}{% endif %}">
 
