a peek at clojure-android

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,8 +24,9 @@ layout: default
   </header>
 
 
-
+{% if page.image %}
  <img class="ui centered tiny image" src="{{ page.image }}">
+{% endif %}
 
 <br/>
 
