--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,23 @@
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:locale" content="en_US">
     
-<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >
+{% if page.url %}
+  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+{% endif %}
+    
+{% if page.tags %}
+  {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag">
+  {% endfor %}
+{% endif %}
+    
+<!--<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >-->
+    
+{% if page.image %}
+  <meta content="/images/posts/{{ page.image }}" property="og:image">
+{% else %}
+  <meta content="/assets/images/blog-icon.png" property="og:image">
+{% endif %}
 
 <meta property="og:image:type" content="{% if page.og_image %}{{ page.og_image_type }}{% else %}{{ site.og_image_type }}{% endif %}">
 
