--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,10 +37,10 @@
     
 <!--<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >-->
     
-{% if page.image %}
-  <meta content="/images/posts/{{ page.image }}" property="og:image">
+{% if page.images %}
+  <meta property="og:image" content="/images/posts/{{ page.images[0].title }}">
 {% else %}
-  <meta content="/assets/images/blog-icon.png" property="og:image">
+  <meta property="og:image" content="/assets/images/blog-icon.png">
 {% endif %}
 
 <meta property="og:image:type" content="{% if page.og_image %}{{ page.og_image_type }}{% else %}{{ site.og_image_type }}{% endif %}">
