add more fb configs

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
  <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.woff2">
  <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.ttf">
     
+<!--
     
 <meta property="og:url" content="{{ site.url }}/{{ page.url }}" />
 <meta property="og:description" context="{{ page.content | strip_html | condense_spaces | truncate:300 }}">
@@ -35,7 +36,7 @@
   {% endfor %}
 {% endif %}
     
-<!--<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >-->
+<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >
     
 {% if page.images %}
   <meta property="og:image" content="/images/posts/{{ page.images[0].title }}">
@@ -50,5 +51,44 @@
 <meta property="og:image:height" content="{% if page.og_image %}{{ page.og_image_height }}{% else %}{{ site.og_image_height }}{% endif %}">
     
 <meta property="fb:profile_id" content="{{ site.fb_profile_id }}">
+-->
+    
+    
+<!--facebook configs:-->
+    
+<meta content="{{ site.title }}" property="og:site_name">
+{% if page.title %}
+  <meta content="{{ page.title }}" property="og:title">
+{% else %}
+  <meta content="{{ site.title }}" property="og:title">
+{% endif %}
+{% if page.title %}
+  <meta content="article" property="og:type">
+{% else %}
+  <meta content="website" property="og:type">
+{% endif %}
+{% if page.content %}
+  <meta content="{{ page.content | strip_html | condense_spaces | truncate:300 }}" property="og:description">
+{% else %}
+  <meta content="{{ site.description }}" property="og:description">
+{% endif %}
+{% if page.url %}
+  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+{% endif %}
+{% if page.images %}
+  <meta content="/images/posts/{{ page.images[0].title }}" property="og:image">
+{% else %}
+  <meta content="/assets/images/blog-icon.png" property="og:image">
+{% endif %}
+{% if page.categories %}
+  {% for category in page.categories limit:1 %}
+  <meta content="{{ category }}" property="article:section">
+  {% endfor %}
+{% endif %}
+{% if page.tags %}
+  {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag">
+  {% endfor %}
+{% endif %}
     
 </head>
