--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,43 +17,6 @@
  <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.woff2">
  <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.ttf">
     
-<!--
-    
-<meta property="og:url" content="{{ site.url }}/{{ page.url }}" />
-<meta property="og:description" context="{{ page.content | strip_html | condense_spaces | truncate:300 }}">
-<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:locale" content="en_US">
-    
-{% if page.url %}
-  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-{% endif %}
-    
-{% if page.tags %}
-  {% for tag in page.tags %}
-  <meta content="{{ tag }}" property="article:tag">
-  {% endfor %}
-{% endif %}
-    
-<meta property="og:image" content="{{ site.url }}/{{ page.image }}" >
-    
-{% if page.images %}
-  <meta property="og:image" content="/images/posts/{{ page.images[0].title }}">
-{% else %}
-  <meta property="og:image" content="/assets/images/blog-icon.png">
-{% endif %}
-
-<meta property="og:image:type" content="{% if page.og_image %}{{ page.og_image_type }}{% else %}{{ site.og_image_type }}{% endif %}">
-
-<meta property="og:image:width" content="{% if page.og_image %}{{ page.og_image_width }}{% else %}{{ site.og_image_width }}{% endif %}">
-
-<meta property="og:image:height" content="{% if page.og_image %}{{ page.og_image_height }}{% else %}{{ site.og_image_height }}{% endif %}">
-    
-<meta property="fb:profile_id" content="{{ site.fb_profile_id }}">
--->
-    
-    
 <!--facebook configs:-->
     
 <meta content="{{ site.title }}" property="og:site_name">
@@ -89,6 +52,6 @@
   {% endfor %}
 {% endif %}
     
+<!--end facebook configs-->
+    
 </head>
-
-<!--sblog-icon.png-->
