trying to fix css bug

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,10 +13,11 @@
  <link rel="stylesheet" type="text/css" href="/css/das-site.css">
  <link rel="stylesheet" type="text/css" href="/css/semantic.css">
  <link rel="stylesheet" type="text/css" href="/semantic/dist/components/icon.css">
- <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.woff">    
- <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.woff2">
- <link rel="stylesheet" type="text/css" href="/semantic/dist/themes/default/assets/fonts/icons.ttf">
-    
+
+ <link rel="stylesheet" type="application/font-woff" href="{{site.github.url}}/semantic/dist/themes/default/assets/fonts/icons.woff">    
+ <link rel="stylesheet" type="application/font-woff2" href="{{site.github.url}}/semantic/dist/themes/default/assets/fonts/icons.woff2">
+ <link rel="stylesheet" type="application/font-ttf" href="{{site.github.url}}/semantic/dist/themes/default/assets/fonts/icons.ttf">
+
 <!--facebook configs:-->
     
 <meta content="{{ site.title }}" property="og:site_name">
