--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     
  <link rel="stylesheet" type="text/css" href="/css/das-site.css">
  <link rel="stylesheet" type="text/css" href="/css/semantic.css">
- <link rel="stylesheet" type="text/css" href="/css/blog.css">
+<!-- <link rel="stylesheet" type="text/css" href="/css/blog.css">-->
  <link rel="stylesheet" type="text/css" href="/semantic/dist/components/icon.css">
 
  <link rel="stylesheet" type="application/font-woff" href="{{site.github.url}}/semantic/dist/themes/default/assets/fonts/icons.woff">    
