--- a/css/blog.css
+++ b/css/blog.css
@@ -1,4 +1,24 @@
-@media only screen and (max-width: 480px) {
+
+@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
+
+   
+    html {
+        max-width: 100%;
+        overflow: scroll;
+        overflow-y: hidden;
+    }
+    
+    ::-webkit-scrollbar {
+        width: 0px;
+        height: 0px;
+        background: transparent;
+    }
+
+    body {
+        -ms-transform: scale(1, 1); /* IE 9 */
+        -webkit-transform: scale(1,1); /* Safari */
+        transform: scale(1,1); /* Standard syntax */      
+    }
 
     .ui.button {
         font-size: 1.2rem;
